--- a/react-app/src/components/Navigation/NavigationLocalCity.css
+++ b/react-app/src/components/Navigation/NavigationLocalCity.css
@@ -18,7 +18,6 @@
     color: rgb(37, 127, 158);
     font-size: 0.8rem;
     font-weight: 400;
-
 }
 
 .under-nav-us {
@@ -26,7 +25,6 @@
     font-size: 0.8rem;
     margin-left: 7px;
     font-weight: 400;
-
 }
 
 .under-nav-l-a {
@@ -34,15 +32,4 @@
     font-size: 0.8rem;
     margin-left: 7px;
     font-weight: 400;
-
-
 }
-
-/* .under-nav-image {
-    height: 33px;
-    margin-left: 12px;
-}
-
-.under-nav-image:hover {
-    cursor: text;
-} */
